k8s/movies.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies-application
  template:
    metadata:
      labels:
        app: movies-application
    spec:
      containers:
        - name: movies
          image: fouadkada/movies
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: movies-k8s-service
spec:
  type: ClusterIP
  selector:
    app: movies-application
  ports:
    - port: 3000
