k8s/recommendations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recommendations-microservice
  template:
    metadata:
      labels:
        app: recommendations-microservice
    spec:
      containers:
        - name: recommendations
          image: fouadkada/recommendation
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations-k8s-service
spec:
  type: ClusterIP
  selector:
    app: recommendations-microservice
  ports:
    - port: 3000
