k8s/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search-microservice
  template:
    metadata:
      labels:
        app: search-microservice
    spec:
      containers:
        - name: search-application
          image: fouadkada/search
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: search-k8s-service
spec:
  type: ClusterIP
  selector:
    app: search-microservice
  ports:
    - port: 3000
